--- a/add-new-student.html
+++ b/add-new-student.html
@@ -34,7 +34,7 @@
       <div
         class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-2 z-20 border border-gray-100 hidden peer-checked:block">
         <a href="./user-profile.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Your Profile</a>
-        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Settings</a>
+        <a href="./forgot-password.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Change Password</a>
         <label for="signout-modal-toggle"
           class="px-3 py-2 text-red-600 hover:bg-gray-100 flex items-center gap-1 cursor-pointer">
           <svg class="w-6 h-6 " fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -71,7 +71,7 @@
               </button>
             </div>
             <nav class="space-y-2 px-4 text-center">
-              <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+              <a href="./dashboard.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
                   <path d="M3 10l9-7 9 7v8a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4H9v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-8z"
                     stroke-linecap="round" stroke-linejoin="round" />
@@ -95,9 +95,9 @@
                   </svg>
                 </button>
                 <div id="attendanceDropdown" class="hidden flex-col mt-2 bg-blue-800">
-                  <a href="#" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
+                  <a href="./mark-attendence.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
                     Attendance</a>
-                  <a href="#" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
+                  <a href="./attendance-record.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
                     Record</a>
                 </div>
               </div>
