--- a/dashboard.html
+++ b/dashboard.html
@@ -71,7 +71,7 @@
           </button>
         </div>
         <nav class="space-y-2 px-4 text-center">
-          <a href="./dashboard.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+          <a href="./dashboard.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500 focus:bg-blue-500">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path d="M3 10l9-7 9 7v8a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4H9v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-8z"
                 stroke-linecap="round" stroke-linejoin="round" />
@@ -156,7 +156,6 @@
           </a>
         </nav>
       </aside>
-
     </div>
     <div class="lg:col-span-9 md:col-span-8 sm:col-span-9 xl:col-span-9">
       <div class="max-w-7xl mx-auto">
