--- a/side-bar.html
+++ b/side-bar.html
@@ -146,7 +146,7 @@
             </svg>
             Notifications
           </a>
-          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500 focus:bg-blue-700">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path d="M12 4v16m8-8H4" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
