--- a/mark-attendence.html
+++ b/mark-attendence.html
@@ -185,7 +185,7 @@
                 <div class="mt-8">
                   <label for="notes" class="block text-sm font-medium text-gray-700">Notes (Optional)</label>
                   <textarea id="notes" rows="3"
-                    class=" block mt-2 w-full rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    class=" block mt-2 w-full rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:outline-none focus:ring-2 focus:ring-black"
                     placeholder="Add any additional notes..."></textarea>
                 </div>
                 <div>
