--- a/fee-structure.html
+++ b/fee-structure.html
@@ -109,14 +109,14 @@
                 Record</a>
             </div>
           </div>
-          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+          <a href="./fee-structure.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path d="M2 7h20M2 10h20M4 17h4m6 0h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"
                 stroke-linecap="round" stroke-linejoin="round" />
             </svg>
             Fees
           </a>
-          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+          <a href="./fine.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path
                 d="M12 9v2m0 4h.01M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
@@ -124,7 +124,7 @@
             </svg>
             Fines
           </a>
-          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+          <a href="./notification.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path
                 d="M15 17h5l-1.41-1.41A2 2 0 0 1 18 14.16V11a6 6 0 0 0-5-5.92V4a2 2 0 1 0-4 0v1.08A6 6 0 0 0 4 11v3.16c0 .54-.22 1.06-.59 1.44L2 17h5m5 0v1a3 3 0 1 1-6 0v-1h6z"
@@ -132,7 +132,7 @@
             </svg>
             Notifications
           </a>
-          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500 focus:bg-blue-700">
+          <a href="./add-new-student.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500 focus:bg-blue-700">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path d="M12 4v16m8-8H4" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
