--- a/reset-password.html
+++ b/reset-password.html
@@ -11,8 +11,8 @@
 
 <body class="min-h-screen flex items-center justify-center bg-gray-100 px-4">
   <div class="w-full max-w-sm bg-white p-8 h-32 rounded-2xl shadow-lg">
-    <!-- <div class="bg-blue-500"><h2 class="text-2xl text-center mb-6  text-white font-semibold py-2">Change Password</h2></div> -->
-    <!-- <h2 class="text-2xl text-center mb-6 bg-blue-500 text-white font-semibold py-2">Change Password</h2> -->
+    <div class="bg-blue-500"><h2 class="text-2xl text-center mb-6  text-white font-semibold py-2">Change Password</h2></div> -->
+     <h2 class="text-2xl text-center mb-6 bg-blue-500 text-white font-semibold py-2">Change Password</h2>
     <div class="bg-blue-500 text-white p-6 rounded-t-2xl text-center">
       <h2 class="text-2xl font-bold">Reset Password</h2>
       <p class="mt-1 text-sm text-blue-100">
@@ -31,7 +31,7 @@
         <span>Back to login</span>
       </a>
 
-      <!-- <div>
+      <div>
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">New Password</label>
           <input type="password" id="password" name="password" placeholder="Enter your New Password" required
             class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
@@ -40,7 +40,7 @@
             <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Confirm Password</label>
             <input type="password" id="password" name="password" placeholder="Enter your Confirm Password" required
               class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
-          </div> -->
+          </div>
       <button type="submit"
         class="w-full bg-blue-500 hover:bg-black text-white font-semibold py-2 rounded-xl transition duration-300">Reset
         Password</button>
