--- a/user-profile.html
+++ b/user-profile.html
@@ -277,44 +277,38 @@
       </div>
       <div class="bg-white p-4 rounded-lg shadow-md">
         <h1 class="text-lg font-semibold">Change Password</h1>
-
         <div class="grid grid-cols-12">
           <div class="col-span-12 md:col-span-4 lg:col-span-4">
             <div class="lg:w-64 mt-3">
-             
-              <input list="emailList" id="email" name="email" placeholder="Select or type email..."
-                class="block w-full rounded-md border border-gray-300 px-3 py-2  focus:border-blue-500 focus:ring focus:ring-blue-200 focus:ring-opacity-50" />
-
-              <datalist id="emailList">
+              <input list="emails" id="email" name="email" placeholder="Type to search email..."
+                class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" />
+              <datalist id="emails">
                 <option value="john@example.com">
                 <option value="jane@example.com">
                 <option value="admin@example.com">
                 <option value="support@yourapp.com">
+                <option value="info@yourcompany.com">
               </datalist>
             </div>
-
-
-
           </div>
-       
-        <div class="col-span-12 md:col-span-4 lg:col-span-4">
-          <div class="mt-3 lg:w-64">
-            <input type="password" name="" id="" placeholder="Enter password"
-              class="border border-gray-300 p-2 w-full rounded-lg">
+          <div class="col-span-12 md:col-span-4 lg:col-span-4">
+            <div class="mt-3 lg:w-64">
+              <input type="password" name="" id="" placeholder="Enter password"
+                class="border border-gray-300 p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
           </div>
-        </div>
-        <div class="col-span-12 md:col-span-4 lg:col-span-4">
-          <div class="lg:w-64 mt-3">
-            <input type="password" name="" id="" placeholder="Confirm password"
-              class="border border-gray-300 p-2 w-full rounded-lg">
+          <div class="col-span-12 md:col-span-4 lg:col-span-4">
+            <div class="lg:w-64 mt-3">
+              <input type="password" name="" id="" placeholder="Confirm password"
+                class="border border-gray-300 p-2 w-full rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="mt-5 lg:text-end sm:text-center">
-        <button type="submit" class="bg-blue-600 text-white p-2 rounded-lg ">Generate Password</button>
+        <div class="mt-5 lg:text-end sm:text-center">
+          <button type="submit" class="bg-blue-600 text-white p-2 rounded-lg ">Generate Password</button>
+        </div>
       </div>
     </div>
-  </div>
   </div>
 </body>
 <script src="./assets/js/dashboard.js"></script>
